2006-12-10  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/main.cc (main): Use gtk_window_set_default_icon_name() to
	have the default window icon looked up in the icon theme, rather
	than explicitely specifying an image filename.  For some reason
	this method has not been wrapped yet.
	(set_default_window_icon): Remove now unused function.
	* src/aboutdialog.cc (AboutDialog::create): For the same reason as
	above, use Gtk::Image::set_from_icon_name() instead of an explicit
	filename to load the application icon.
	* src/globalstrings.h (application_icon_filename): Remove now
	unused string.

2006-12-09  Daniel Elstner  <daniel.kitta@gmail.com>

	* regexxer.desktop.in: Remove a couple of keys and change some
	values to match the latest freedesktop.org desktop-entry-spec.

	* pixmaps/Makefile.am: Install the regexxer application icon
	to $(datadir)/icons/hicolor/48x48/apps as the freedesktop.org
	icon-theme-spec says.

2006-11-21  Daniel Elstner  <daniel.kitta@gmail.com>

	* ui/mainwindow.glade (menuitem_about): Replace the stock item
	reference "regexxer-about" with "gtk-about", now that the latter
	has been added to GTK+.
	* src/main.cc (stock_icon_about): Remove.
	(regexxer_stock_items): Remove "regexxer-about" stock item.
	* pixmaps/Makefile.am (stockimages): Remove stock_menu_about.png
	from list.
	* pixmaps/stock_menu_about.png: Remove file.

2006-11-21  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/filetree.cc (FileTree::on_style_changed): Use the proper
	stock images "file" and "directory" instead of abusing "new" and
	"open", respectively.  These new items have been available since
	GTK+ 2.6.

2006-11-13  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/stringutils.cc (parse_control_char, Util::convert_to_ascii):
	Avoid bitwise operations with possibly signed char values.  Make
	use of explicit casts and unsigned integer literals instead.

2006-11-13  Daniel Elstner  <daniel.kitta@gmail.com>

	* AUTHORS: Change my mail address.
